--- a/src/Styles/header_styles.scss
+++ b/src/Styles/header_styles.scss
@@ -1,19 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 .header-content-wrapper { 
+    position: relative;
     display: flex;
     justify-content: center;
-    background-color: black;
+    // background-color: black;
+    // background-color: rgba(0, 0, 0, 0.7);
     background-image: url('../assets/hero-bg.jpg');
     background-size: cover;
+    background-position: 50% 35%;
     // height: 35vh;
     // width: 100%;
 
+} 
+
+.header-content-wrapper::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Black color with 50% opacity */
 }
 
 .logo-container { 
     display: flex;
     align-items: center;
+    z-index: 1;
 }
 
 .logo-container img { 
@@ -25,7 +39,16 @@
     padding: 1em;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+    z-index: 1;
+}
+
+.header-btn-container button { 
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2rem;
+    border-radius: 10%;
 }
 
 
@@ -38,6 +61,7 @@
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
+    z-index: 1;
 }
 
 .logo-title-links-toprow-container h1 { 
