--- a/src/Styles/header_styles.scss
+++ b/src/Styles/header_styles.scss
@@ -1,77 +1,178 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+
 
 .header-content-wrapper { 
-    position: relative;
     display: flex;
-    justify-content: center;
-    // background-color: black;
-    // background-color: rgba(0, 0, 0, 0.7);
-    background-image: url('../assets/hero-bg.jpg');
-    background-size: cover;
-    background-position: 50% 35%;
-    // height: 35vh;
+    justify-content: space-between;
+    background-color: black;
+    // align-items: center;
+    font-family: "Bebas Neue", sans-serif;
     // width: 100%;
-
-} 
-
-.header-content-wrapper::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Black color with 50% opacity */
-}
-
-.logo-container { 
-    display: flex;
-    align-items: center;
-    z-index: 1;
-}
-
-.logo-container img { 
-    width: 14em;
 }
 
 .header-btn-container { 
-    width: 100%;
-    padding: 1em;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    z-index: 1;
+    align-items: flex-end;
+    gap: 2em;
+    // gap: 4em;
 }
+
 
 .header-btn-container button { 
+    // display: flex;
+    // align-items: center;
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 2rem;
-    border-radius: 10%;
-}
-
-
-.logo-title-links-toprow-container { 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    // padding: 0.5em 1em;
+    // padding: 0.3em;
+    // border-radius: 12%;
+    border: none;
+    background-color: black;
     color: white;
-    font-family: "Bebas Neue", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    z-index: 1;
+    cursor: pointer;
 }
 
-.logo-title-links-toprow-container h1 { 
-    font-size: 7rem;
+.header-vault-bjj-logo { 
+    width: 12em;
+    // vertical-align: middle;
+    // margin: 0;
+    // padding: 0;
+    position: relative;
+    bottom: 2em;
+    // padding-bottom: 2em;
 }
 
-.logo-title-links-toprow-container h2 { 
-    font-size: 3rem;
+.header-insta-fb-links-container { 
+    display: flex;
+    align-items: flex-start;
+    gap: 1em;
 }
 
-.logo-title-links-toprow-container h4 { 
-    font-size: 2rem;
+.header-insta-fb-links-container img { 
+    width: 3em;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// .header-content-wrapper { 
+//     position: relative;
+//     display: flex;
+//     justify-content: center;
+//     background-image: url('../assets/hero-bg.jpg');
+//     background-size: cover;
+//     background-position: 50% 35%;
+
+// } 
+
+// .header-content-wrapper::before {
+//     content: '';
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     background-color: rgba(0, 0, 0, 0.7); /* Black color with 50% opacity */
+// }
+
+// .logo-container { 
+//     display: flex;
+//     align-items: center;
+//     z-index: 1;
+// }
+
+// .logo-container img { 
+//     width: 14em;
+// }
+
+// .header-btn-container { 
+//     width: 100%;
+//     padding: 1em;
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: space-between;
+//     z-index: 1;
+// }
+
+// .header-btn-container button { 
+//     font-family: "Bebas Neue", sans-serif;
+//     font-weight: 400;
+//     font-style: normal;
+//     font-size: 2rem;
+//     border-radius: 10%;
+// }
+
+
+// .logo-title-links-toprow-container { 
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
+//     color: white;
+//     font-family: "Bebas Neue", sans-serif;
+//     font-weight: 400;
+//     font-style: normal;
+//     z-index: 1;
+// }
+
+// .logo-title-links-toprow-container h1 { 
+//     font-size: 7rem;
+// }
+
+// .logo-title-links-toprow-container h2 { 
+//     font-size: 3rem;
+// }
+
+// .logo-title-links-toprow-container h4 { 
+//     font-size: 2rem;
+// }
