--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -1,2 +1,3 @@
 @import '../Styles/header_styles.scss';
 @import '../Styles/background_body_styles.scss';
+@import '../Styles/title_and_img_component_styles.scss';
