--- a/src/Styles/header_styles.scss
+++ b/src/Styles/header_styles.scss
@@ -14,8 +14,10 @@
 
 .header-btn-container { 
     display: flex;
+    // justify-content: center;
     align-items: flex-end;
     gap: 2em;
+    
     // gap: 4em;
 }
 
@@ -34,6 +36,8 @@
     background-color: black;
     color: white;
     cursor: pointer;
+    opacity: 0;
+    animation: fadeIn 2s ease-in-out forwards;
 }
 
 .header-vault-bjj-logo { 
@@ -43,6 +47,8 @@
     // padding: 0;
     position: relative;
     bottom: 2em;
+    // opacity: 0;
+    animation: fadeIn 3s ease-in-out forwards;
     // padding-bottom: 2em;
 }
 
@@ -51,15 +57,80 @@
     align-items: flex-start;
     gap: 1em;
     padding: 0.5em;
+    // opacity: 0;
+    animation: fadeIn 3s ease-in-out forwards;
 }
 
 .header-insta-fb-links-container img { 
     width: 3em;
 }
 
+.header-btn-container button:nth-child(1) { 
+    animation-delay: .5s;
+}
+
+.header-btn-container button:nth-child(2) { 
+    animation-delay: 1s;
+}
+
+.header-btn-container button:nth-child(3) { 
+    animation-delay: 1.5s;
+} 
+
+.header-btn-container button:nth-child(4) { 
+    animation-delay: 2s;
+}
+
+.header-btn-container button:nth-child(5) { 
+    animation-delay: 2.5s;
+}
+
+.header-btn-container button:nth-child(6) { 
+    animation-delay: 3s;
+} 
 
 
 
+@keyframes fadeIn { 
+    0% { 
+        opacity: 0;
+    }
+
+    100% { 
+        opacity: 1;
+    }
+}
+
+
+@media (max-width: 1070px) { 
+    .header-content-wrapper { 
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media (max-width: 768px) { 
+    .header-btn-container { 
+        display: flex;
+        gap: .7em;
+        // flex-direction: column;
+    }
+
+    .header-btn-container button { 
+        font-size: 3.5vw;
+        // border-right: 1px solid silver;
+        // padding: .2em;
+        // text-align: center;
+    }
+
+    .header-insta-fb-links-container img { 
+        width: 2.3em;
+    }
+
+    
+}
 
 
 
