--- a/src/Styles/title_and_img_component_styles.scss
+++ b/src/Styles/title_and_img_component_styles.scss
@@ -4,18 +4,21 @@
 
 .title-img-content-wrapper { 
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     background-color: black;
     color: white;
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 2rem;
+    // padding: 2em;
 }
 
 .title-subtitle-container { 
     text-align: center;
     padding: 4em;
+    // padding-right: 2em;
+    // margin-right: 3em;
 }
 
 .title-subtitle-container h1 { 
@@ -33,3 +36,180 @@
     border-radius: 5%;
 }
 
+
+
+@media (max-width: 1630px) { 
+    .title-subtitle-container { 
+        padding: 2em;
+    }
+
+    .bjj-img-container { 
+        padding: 1em;
+    } 
+
+}
+
+@media (max-width: 1455px) { 
+
+   
+
+        .title-subtitle-container h1 { 
+        font-size: 4.4rem;
+    }
+
+    .title-subtitle-container h3 { 
+        font-size: 2.5rem;
+    }
+
+    .title-subtitle-container h4 { 
+        font-size: 1.5rem;
+    }
+
+    .bjj-img-styles { 
+        width: 15em;
+    }
+}
+
+@media (max-width: 1067px) { 
+
+
+    .title-subtitle-container { 
+        padding: 1em;
+        // line-height: 1.8;
+    }
+
+    .bjj-img-container { 
+        padding: 0.5em;
+    } 
+
+    .title-subtitle-container h1 { 
+        font-size: 2.7rem;
+        padding-bottom: 0.8em;
+    }
+
+    .title-subtitle-container h3 { 
+        font-size: 1.7rem;
+        padding-bottom: .3em;
+    }
+
+    .title-subtitle-container h4 { 
+        font-size: 1.5rem;
+        padding-bottom: .3em;
+    }
+
+    .bjj-img-styles { 
+        width: 13em;
+    } 
+}
+
+@media (max-width: 765px) { 
+    .title-img-content-wrapper { 
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .title-subtitle-container { 
+        padding: 1em;
+    }
+
+    .bjj-img-container { 
+        padding: 0;
+    }
+}
+
+@media (max-width: 455px) { 
+
+    .bjj-img-styles { 
+        width: 11em;
+    }
+}
+
+@media (max-width: 390px) {
+    .bjj-img-styles { 
+        width: 10em;
+    }
+}
+
+
+
+// og media queries
+
+// @media (max-width: 1630px) { 
+//     .title-subtitle-container { 
+//         padding: 2em;
+//     }
+
+//     .bjj-img-container { 
+//         padding: 1em;
+//     }
+// }
+
+
+// @media (max-width: 1387px) { 
+//     .title-img-content-wrapper { 
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: center;
+//         align-items: center;
+//     }
+
+//     .title-subtitle-container { 
+//         padding: 1em;
+//     }
+
+//     .title-subtitle-container h1 { 
+//         font-size: 5rem;
+//     }
+
+//     .bjj-img-container { 
+//         padding: 0;
+//     }
+// }
+
+
+// @media (max-width: 660px) { 
+
+//     .title-subtitle-container h1 { 
+//         font-size: 4rem;
+//     }
+
+//     .title-subtitle-container h3 { 
+//         font-size: 2rem;
+//     }
+
+//     .title-subtitle-container h4 { 
+//         font-size: 1.5rem;
+//     }
+
+
+//     .bjj-img-styles { 
+//         width: 15em;
+//     }
+// }
+
+// @media (max-width: 508px) { 
+//     .bjj-img-styles { 
+//         width: 12em;
+//     }
+// }
+
+// @media (max-width: 458px) { 
+//     .bjj-img-styles { 
+//         width: 11em;
+//     }
+
+//     .title-subtitle-container h1 { 
+//         font-size: 3rem;
+//     }
+
+//     .title-subtitle-container h3 { 
+//         font-size: 1.5rem;
+//     }
+
+//     .title-subtitle-container h4 { 
+//         font-size: 1rem;
+//     }
+
+// }
