added hover class to header buttons

--- a/src/Styles/header_styles.scss
+++ b/src/Styles/header_styles.scss
@@ -40,6 +40,12 @@
     animation: fadeIn 2s ease-in-out forwards;
 }
 
+.header-btn-container button:hover { 
+    background-color: white;
+    color: black;
+    border-radius: 5%;
+}
+
 .header-vault-bjj-logo { 
     width: 12em;
     // vertical-align: middle;
