began adding content for program cards, 4 cards displayed with text on them, now will work on getting pictures and styling then further

--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -1,3 +1,5 @@
 @import '../Styles/header_styles.scss';
 @import '../Styles/background_body_styles.scss';
 @import '../Styles/title_and_img_component_styles.scss';
+@import '../Styles/about_us_homepage.scss';
+@import '../Styles/our_programs_styles.scss';
