--- a/src/Styles/background_body_styles.scss
+++ b/src/Styles/background_body_styles.scss
@@ -3,3 +3,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+body { 
+    background-color: black;
+    color: white;
+    // background-image: url('assets/logo.png');
+}
