started adding photos for programs section, will try to see if I can get the text length in the cards to be similar so that way the cards are the same size

--- a/src/Styles/our_programs_styles.scss
+++ b/src/Styles/our_programs_styles.scss
@@ -20,6 +20,13 @@
 
 .card-container { 
     text-align: center;
+    width: 20em;
+    padding: 1em;
+}
+
+.card-body { 
+    height: 15rem;
+    overflow: auto;
 }
 
 
