--- a/src/Styles/our_programs_styles.scss
+++ b/src/Styles/our_programs_styles.scss
@@ -24,10 +24,20 @@
     padding: 1em;
 }
 
-.card-body { 
-    height: 15rem;
-    overflow: auto;
+.card-4-img { 
+    width: 17em;
 }
+
+.program-photo { 
+    border-radius: 4%;
+}
+
+// fixed height styles for program cards
+
+// .card-body { 
+//     height: 15rem;
+//     overflow: auto;
+// }
 
 
 // .card-container { 
