added content for what is bjj section

--- a/src/Styles/title_and_img_component_styles.scss
+++ b/src/Styles/title_and_img_component_styles.scss
@@ -25,6 +25,7 @@
 
 .title-subtitle-container h1 { 
     font-size: 7rem;
+    font-weight: bold;
     // animation: slideIn 1s ease forwards;
 
 }
@@ -169,7 +170,7 @@
 
 
     .title-subtitle-container h1 { 
-        font-size: 2rem;
+        font-size: 2.5rem;
         padding-bottom: 0;
     }
 
