--- a/src/Styles/about_us_homepage.scss
+++ b/src/Styles/about_us_homepage.scss
@@ -6,6 +6,7 @@
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
+    padding: 3em;
 }
 
 .about-us-content-wrapper h1 { 
@@ -15,12 +16,12 @@
     font-weight: bold;
     font-style: normal;
     // text-decoration: underline;
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 .about-us-content-wrapper p { 
     text-align: center;
-    padding: 1em;
+    // padding: 1em;
     font-size: 1.5rem;
 }
 
