--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -3,3 +3,4 @@
 @import '../Styles/title_and_img_component_styles.scss';
 @import '../Styles/about_us_homepage.scss';
 @import '../Styles/our_programs_styles.scss';
+@import '../Styles//what_is_jiu_jitsu_styles.scss';
