--- a/src/Styles/our_programs_styles.scss
+++ b/src/Styles/our_programs_styles.scss
@@ -8,14 +8,25 @@
 
 .our-programs-header-container h1 { 
     text-align: center;
-    font-size: 3rem;
+    font-size: 2.5rem;
+    font-weight: bold;
 }
 
 .programs-card-container { 
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1.5em;
+    flex-wrap: wrap;
+    gap: 1em;
+}
+
+.card-group-1,
+.card-group-2 { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1em;
 }
 
 .card-container { 
@@ -60,3 +71,14 @@
     justify-content: center;
     align-items: center;
 }
+
+// @media (max-width: 1320px) { 
+//     .programs-card-container { 
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//         flex-wrap: wrap;
+//     }
+
+  
+// }
