debugging, having an issue with the programs animation not running on tablet screen sizes

--- a/src/Styles/about_us_homepage.scss
+++ b/src/Styles/about_us_homepage.scss
@@ -25,3 +25,16 @@
     font-size: 1.5rem;
 }
 
+
+@media (max-width: 660px) { 
+    .about-us-content-wrapper p { 
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width: 490px) { 
+    .about-us-content-wrapper p { 
+        font-size: 1rem;
+    }
+}
+
