--- a/src/Styles/title_and_img_component_styles.scss
+++ b/src/Styles/title_and_img_component_styles.scss
@@ -17,7 +17,7 @@
 .title-subtitle-container { 
     text-align: center;
     padding: 4em;
-    opacity: 0;
+    // opacity: 0;
     animation: slideIn 1.5s ease forwards;
     // padding-right: 2em;
     // margin-right: 3em;
