--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -4,3 +4,4 @@
 @import '../Styles/about_us_homepage.scss';
 @import '../Styles/our_programs_styles.scss';
 @import '../Styles//what_is_jiu_jitsu_styles.scss';
+@import '../Styles/check_our_facility_styles.scss';
