--- a/src/Styles/our_programs_styles.scss
+++ b/src/Styles/our_programs_styles.scss
@@ -4,6 +4,7 @@
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
+    opacity: 0;
 }
 
 .our-programs-header-container h1 { 
@@ -82,3 +83,21 @@
 
   
 // }
+
+
+.our-programs-content-wrapper.focused { 
+    animation: slideIn 1s ease;
+    opacity: 1;
+}
+
+
+@keyframes slideIn { 
+    0% { 
+        transform: translateX(-150em);
+    } 
+
+    100% { 
+        transform: translateX(0);
+    }
+
+}
