--- a/src/Styles/what_is_jiu_jitsu_styles.scss
+++ b/src/Styles/what_is_jiu_jitsu_styles.scss
@@ -30,3 +30,23 @@
     font-size: 1.5rem;
     padding: 2em;
 }
+
+@media (max-width: 660px) { 
+    .what-is-bjj-content-wrapper img { 
+        width: 28em;
+    }
+
+    .what-is-bjj-content-wrapper p { 
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width: 490px) { 
+    .what-is-bjj-content-wrapper img { 
+        width: 20em;
+    }
+
+    .what-is-bjj-content-wrapper p { 
+        font-size: 1rem;
+    }
+}
